Courses/202404/Templates/Ingress/deploymentapp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        name: app1pod
---
apiVersion: v1
kind: Service
metadata:
   name: app1-service
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
