Courses/202404/Templates/Ingress/deploymentapp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        name: app2pod
---
apiVersion: v1
kind: Service
metadata:
   name: app2-service
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
