Courses/202404/Templates/Ingress/elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
      - image: elasticsearch:7.17.17
        name: elasticpod
---
apiVersion: v1
kind: Service
metadata:
   name: elastic-service
spec:
  selector:
    app: elastic
  ports:
    - port: 80
      targetPort: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /elastic(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: elastic-service
            port:
              number: 80
